product caltalogue code changes

--- a/ProductCatalogueService/src/main/resources/templates/index.html
+++ b/ProductCatalogueService/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/cosmo/bootstrap.min.css" />
  <script src= "https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" ></script>
  
-<body>
+<body bgcolor="coral">
 	<nav class="navbar navbar-expand-md bg-dark navbar-dark">
 		<!-- Brand -->
 		<a class="navbar-brand" href="#">Product Catalogue Management</a>
