--- a/ProductCatalogueService/src/main/resources/templates/index.html
+++ b/ProductCatalogueService/src/main/resources/templates/index.html
@@ -22,6 +22,7 @@
 		<div class="collapse navbar-collapse" id="collapsibleNavbar">
 			<ul class="navbar-nav">
 				<li class="nav-item"><a class="nav-link" th:href="@{/liquors}">All Liquors</a></li>
+				<li class="nav-item"><a class="nav-link" th:href="@{/liquors/new}">Add Product</a></li>
 
 			</ul>
 		</div>
