--- a/ProductCatalogueService/src/main/resources/templates/products.html
+++ b/ProductCatalogueService/src/main/resources/templates/products.html
@@ -8,24 +8,25 @@
 	
 </head>
 <body>
-<!-- <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-		Brand
-		<a class="navbar-brand" href="#">Product Catalogue Management</a>
+<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+	<!-- Brand -->
+	<a class="navbar-brand" href="#">Product Catalogue Management</a>
 
-		Toggler/collapsibe Button
-		<button class="navbar-toggler" type="button" data-toggle="collapse"
+	<!-- Toggler/collapsibe Button -->
+	<button class="navbar-toggler" type="button" data-toggle="collapse"
 			data-target="#collapsibleNavbar">
-			<span class="navbar-toggler-icon"></span>
-		</button>
+		<span class="navbar-toggler-icon"></span>
+	</button>
 
-		Navbar links
-		<div class="collapse navbar-collapse" id="collapsibleNavbar">
-			<ul class="navbar-nav">
-				<li class="nav-item"><a class="nav-link" th:href="@{/liquors}">All Liquors</a></li>
+	<!-- Navbar links -->
+	<div class="collapse navbar-collapse" id="collapsibleNavbar">
+		<ul class="navbar-nav">
+			<li class="nav-item"><a class="nav-link" th:href="@{/liquors}">All Liquors</a></li>
+			<li class="nav-item"><a class="nav-link" th:href="@{/liquors/new}">Add Product</a></li>
 
-			</ul>
-		</div>
-	</nav> -->
+		</ul>
+	</div>
+</nav>
 	
 	<!-- <div>
 		<h2>List of Products</h2>
